--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,34 @@ form {
   width: 300px;
   margin: 0 auto;
 }
+
+.playMusic {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width: 100%;
+  text-align: center;
+  margin: 10% 0;
+  min-height: 100px;
+  align-items: center;
+}
+
+#root {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.loader-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
+}
